[package]
name = "search-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "console"
] }
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"
